--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2300,12 +2300,10 @@
             "collapse_section": "Складывание секций",
             "description_card": "Описание",
             "dont_have_voucher": "Еще нет кредита?",
-            "duration_of_promotion": "Продолжительность акции",
             "expand_section": "Развернуть раздел",
             "expire_by_date": "Действует до {{date}}",
             "how_can_i_pay": "Как я могу заплатить?",
             "locations_on_map": "Места на карте",
-            "login_to_order": "Войдите, чтобы заказать сейчас",
             "more_info": "Дополнительная информация",
             "next_image": "Следующее изображение",
             "payment_option_qr": "Показать QR-код у провайдера",
@@ -2314,13 +2312,15 @@
             "product_images": "Изображения продуктов",
             "provider": "Поставщик",
             "quantity_limit": "Макс {{limit}} p.p.",
-            "request_one_now": "Подайте заявку прямо сейчас!",
             "show_image_of_total": "Показать изображение {{current}} из {{total}}",
             "when": "Когда",
             "where": "Где",
             "add_to_favorites": "Добавить в избранное",
             "ideal_logo_alt": "Логотип iDEAL",
-            "remove_from_favorites": "Удалить из избранного"
+            "remove_from_favorites": "Удалить из избранного",
+            "duration_of_promotion": "Продолжительность",
+            "login_to_order": "Войдите в систему, чтобы заказать",
+            "request_one_now": "Сделать запрос"
         },
         "low_amount": "У вас нет кредита с достаточным балансом.",
         "map": {
@@ -2330,7 +2330,8 @@
         "tooltip": "Сколько еще раз вы можете воспользоваться этим предложением",
         "price": {
             "free": "Бесплатно",
-            "informational": "Только в магазине"
+            "informational": "Только в магазине",
+            "payout": "Предоставление средств"
         },
         "other_products": "Вам также может понравиться это?"
     },
@@ -3236,6 +3237,9 @@
             },
             "fijnder": {
                 "funds": "Схемы"
+            },
+            "isd": {
+                "funds": "Схемы"
             }
         },
         "user_menu": {
@@ -3437,7 +3441,6 @@
             "view": "Читать далее"
         },
         "payout": {
-            "accept_compliance_rules": "Я использую эти деньги только для покупки товаров, разрешенных в рамках этого фонда.",
             "accept_compliance_rules_label": "Условия",
             "amount": "Сумма",
             "cancel": "Отмена",
@@ -3454,7 +3457,9 @@
             "voucher_label": "Кредит",
             "warning_count_reached": "Максимальное количество выплат по данному кредиту достигнуто.",
             "warning_not_enough_amount_fixed": "Этот кредит должен включать в себя как минимум {{ amount }} для выплаты.",
-            "warning_not_enough_amount_min": "Этот кредит должен включать в себя как минимум {{ min }} для выплаты."
+            "warning_not_enough_amount_min": "Этот кредит должен включать в себя как минимум {{ min }} для выплаты.",
+            "accept_compliance_rules": "Я согласен с приведенными ниже условиями и положениями.",
+            "accept_compliance_rules_info": "<p><strong>Я заявляю, что:</strong></p><ul><li>Я использую деньги только для этой деятельности;</li><li>Я использую деньги в соответствии с правилами программы;</li><li>Я понимаю, что должен вернуть деньги, если использую их неправильно.</li></ul>"
         }
     },
     "vouchers": {
