--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -2300,12 +2300,10 @@
             "collapse_section": "Składanie sekcji",
             "description_card": "Opis",
             "dont_have_voucher": "Nie masz jeszcze kredytu?",
-            "duration_of_promotion": "Czas trwania promocji",
             "expand_section": "Rozwiń sekcję",
             "expire_by_date": "Ważne do {{date}}",
             "how_can_i_pay": "Jak mogę zapłacić?",
             "locations_on_map": "Lokalizacje na mapie",
-            "login_to_order": "Zaloguj się, aby zamówić teraz",
             "more_info": "Więcej informacji",
             "next_image": "Następny obraz",
             "payment_option_qr": "Pokaż kod QR u dostawcy",
@@ -2314,13 +2312,15 @@
             "product_images": "Zdjęcia produktów",
             "provider": "Dostawca",
             "quantity_limit": "Max {{limit}} p.p.",
-            "request_one_now": "Złóż wniosek już teraz!",
             "show_image_of_total": "Pokaż obraz {{current}} z {{total}}",
             "when": "Kiedy",
             "where": "Gdzie",
             "add_to_favorites": "Dodaj do ulubionych",
             "ideal_logo_alt": "Logo iDEAL",
-            "remove_from_favorites": "Usuń z ulubionych"
+            "remove_from_favorites": "Usuń z ulubionych",
+            "duration_of_promotion": "Czas trwania",
+            "login_to_order": "Zaloguj się, aby zamówić",
+            "request_one_now": "Złóż zapytanie"
         },
         "low_amount": "Nie masz kredytu z wystarczającym saldem.",
         "map": {
@@ -2330,7 +2330,8 @@
         "tooltip": "Ile razy jeszcze możesz skorzystać z tej oferty?",
         "price": {
             "free": "Darmowy",
-            "informational": "Tylko w sklepie"
+            "informational": "Tylko w sklepie",
+            "payout": "Wypłata"
         },
         "other_products": "Może ci się również spodobać?"
     },
@@ -3236,6 +3237,9 @@
             },
             "fijnder": {
                 "funds": "Programy"
+            },
+            "isd": {
+                "funds": "Programy"
             }
         },
         "user_menu": {
@@ -3437,7 +3441,6 @@
             "view": "Czytaj więcej"
         },
         "payout": {
-            "accept_compliance_rules": "Używam tych pieniędzy tylko do zakupu produktów dozwolonych w ramach tego funduszu.",
             "accept_compliance_rules_label": "Warunki",
             "amount": "Kwota",
             "cancel": "Anuluj",
@@ -3454,7 +3457,9 @@
             "voucher_label": "Kredyt",
             "warning_count_reached": "Osiągnięto maksymalną liczbę wypłat dla tego kredytu.",
             "warning_not_enough_amount_fixed": "Kredyt ten musi obejmować co najmniej {{ amount }} do wypłaty.",
-            "warning_not_enough_amount_min": "Kredyt ten musi obejmować co najmniej {{ min }} do wypłaty."
+            "warning_not_enough_amount_min": "Kredyt ten musi obejmować co najmniej {{ min }} do wypłaty.",
+            "accept_compliance_rules": "Zgadzam się na poniższe warunki.",
+            "accept_compliance_rules_info": "<p><strong>Oświadczam, że:</strong></p><ul><li>Wykorzystuję pieniądze wyłącznie na tę działalność;</li><li>wykorzystuję pieniądze zgodnie z zasadami programu;</li><li>Rozumiem, że muszę zwrócić pieniądze, jeśli nie wykorzystam ich prawidłowo.</li></ul>"
         }
     },
     "vouchers": {
