--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2300,12 +2300,10 @@
             "collapse_section": "Складання секцій",
             "description_card": "Опис",
             "dont_have_voucher": "Кредиту ще немає?",
-            "duration_of_promotion": "Тривалість акції",
             "expand_section": "Розгорнути розділ",
             "expire_by_date": "Дійсно до {{date}}",
             "how_can_i_pay": "Як я можу заплатити?",
             "locations_on_map": "Розташування на карті",
-            "login_to_order": "Увійдіть, щоб замовити зараз",
             "more_info": "Більше інформації",
             "next_image": "Наступне зображення",
             "payment_option_qr": "Показати QR-код у постачальника",
@@ -2314,13 +2312,15 @@
             "product_images": "Зображення продукції",
             "provider": "Провайдер",
             "quantity_limit": "Макс {{limit}} п.п.",
-            "request_one_now": "Подайте заявку зараз!",
             "show_image_of_total": "Показати зображення {{current}} від {{total}}",
             "when": "Коли",
             "where": "Де",
             "add_to_favorites": "Додати в обране Обране",
             "ideal_logo_alt": "Логотип iDEAL",
-            "remove_from_favorites": "Видалити з обраного"
+            "remove_from_favorites": "Видалити з обраного",
+            "duration_of_promotion": "Тривалість",
+            "login_to_order": "Увійдіть, щоб замовити",
+            "request_one_now": "Зробити запит"
         },
         "low_amount": "У вас немає кредиту з достатнім балансом.",
         "map": {
@@ -2330,7 +2330,8 @@
         "tooltip": "Скільки разів ви можете скористатися цією пропозицією",
         "price": {
             "free": "Безкоштовно",
-            "informational": "Тільки в магазині"
+            "informational": "Тільки в магазині",
+            "payout": "Виплата коштів"
         },
         "other_products": "Можливо, вам також сподобається це?"
     },
@@ -3236,6 +3237,9 @@
             },
             "fijnder": {
                 "funds": "Схеми"
+            },
+            "isd": {
+                "funds": "Схеми"
             }
         },
         "user_menu": {
@@ -3437,7 +3441,6 @@
             "view": "Читати далі"
         },
         "payout": {
-            "accept_compliance_rules": "Я використовую ці гроші лише на продукти, дозволені цим фондом.",
             "accept_compliance_rules_label": "Умови",
             "amount": "Сума",
             "cancel": "Скасувати",
@@ -3454,7 +3457,9 @@
             "voucher_label": "Кредит",
             "warning_count_reached": "Максимальна кількість виплат за цим кредитом досягнута.",
             "warning_not_enough_amount_fixed": "Цей кредит повинен містити щонайменше {{ amount }} для виплати.",
-            "warning_not_enough_amount_min": "Цей кредит повинен містити щонайменше {{ min }} для виплати."
+            "warning_not_enough_amount_min": "Цей кредит повинен містити щонайменше {{ min }} для виплати.",
+            "accept_compliance_rules": "Я погоджуюся з умовами та положеннями, викладеними нижче.",
+            "accept_compliance_rules_info": "<p><strong>Я заявляю про це:</strong></p><ul><li>Я використовую гроші тільки для цієї діяльності;</li><li>Я використовую гроші відповідно до правил схеми;</li><li>Я розумію, що повинен повернути гроші, якщо використаю їх не за призначенням.</li></ul>"
         }
     },
     "vouchers": {
