--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -2103,8 +2103,8 @@
             "warning_count_reached": "تم الوصول إلى الحد الأقصى لعدد المدفوعات لهذا الرصيد.",
             "warning_not_enough_amount_fixed": "يجب أن يتضمن هذا الرصيد {{ amount }} على الأقل للدفع.",
             "warning_not_enough_amount_min": "يجب أن يتضمن هذا الرصيد {{ min }} على الأقل للدفع.",
-            "accept_compliance_rules": "أوافق على الشروط والأحكام أدناه.",
-            "accept_compliance_rules_info": "<p><strong>أقر بأنني:</strong></p><ul><li>أنا أستخدم الأموال لهذا النشاط فقط;</li><li>أنا أستخدم المال وفقاً لقواعد البرنامج;</li><li>أفهم أنني يجب أن أسدد الأموال إذا لم أستخدمها بشكل صحيح.</li></ul>"
+            "accept_compliance_rules_info": "<p><strong>أقر بأنني:</strong></p><ul><li>أنا أستخدم الأموال لهذا النشاط فقط;</li><li>أنا أستخدم المال وفقاً لقواعد البرنامج;</li><li>أفهم أنني يجب أن أسدد الأموال إذا لم أستخدمها بشكل صحيح.</li></ul>",
+            "accept_compliance_rules": "أوافق على الشروط والأحكام المذكورة أعلاه."
         }
     },
     "vouchers": {
