--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -3458,8 +3458,8 @@
             "warning_count_reached": "Die maximale Anzahl der Auszahlungen für dieses Guthaben wurde erreicht.",
             "warning_not_enough_amount_fixed": "Dieses Guthaben muss mindestens {{ amount }} für eine Auszahlung umfassen.",
             "warning_not_enough_amount_min": "Dieses Guthaben muss mindestens {{ min }} für eine Auszahlung umfassen.",
-            "accept_compliance_rules": "Ich erkläre mich mit den nachstehenden Bestimmungen und Bedingungen einverstanden.",
-            "accept_compliance_rules_info": "<p><strong>Ich erkläre, dass:</strong></p><ul><li>Ich verwende das Geld nur für diese Aktivität;</li><li>Ich verwende das Geld gemäß den Regeln des Programms;</li><li>ich verstehe, dass ich das Geld zurückzahlen muss, wenn ich es nicht ordnungsgemäß verwende.</li></ul>"
+            "accept_compliance_rules_info": "<p><strong>Ich erkläre, dass:</strong></p><ul><li>Ich verwende das Geld nur für diese Aktivität;</li><li>Ich verwende das Geld gemäß den Regeln des Programms;</li><li>ich verstehe, dass ich das Geld zurückzahlen muss, wenn ich es nicht ordnungsgemäß verwende.</li></ul>",
+            "accept_compliance_rules": "Ich erkläre mich mit den oben genannten Bestimmungen und Bedingungen einverstanden."
         }
     },
     "vouchers": {
