--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -3458,8 +3458,8 @@
             "warning_count_reached": "Максимальное количество выплат по данному кредиту достигнуто.",
             "warning_not_enough_amount_fixed": "Этот кредит должен включать в себя как минимум {{ amount }} для выплаты.",
             "warning_not_enough_amount_min": "Этот кредит должен включать в себя как минимум {{ min }} для выплаты.",
-            "accept_compliance_rules": "Я согласен с приведенными ниже условиями и положениями.",
-            "accept_compliance_rules_info": "<p><strong>Я заявляю, что:</strong></p><ul><li>Я использую деньги только для этой деятельности;</li><li>Я использую деньги в соответствии с правилами программы;</li><li>Я понимаю, что должен вернуть деньги, если использую их неправильно.</li></ul>"
+            "accept_compliance_rules_info": "<p><strong>Я заявляю, что:</strong></p><ul><li>Я использую деньги только для этой деятельности;</li><li>Я использую деньги в соответствии с правилами программы;</li><li>Я понимаю, что должен вернуть деньги, если использую их неправильно.</li></ul>",
+            "accept_compliance_rules": "Я согласен с вышеуказанными условиями и положениями."
         }
     },
     "vouchers": {
