--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -3458,8 +3458,8 @@
             "warning_count_reached": "Максимальна кількість виплат за цим кредитом досягнута.",
             "warning_not_enough_amount_fixed": "Цей кредит повинен містити щонайменше {{ amount }} для виплати.",
             "warning_not_enough_amount_min": "Цей кредит повинен містити щонайменше {{ min }} для виплати.",
-            "accept_compliance_rules": "Я погоджуюся з умовами та положеннями, викладеними нижче.",
-            "accept_compliance_rules_info": "<p><strong>Я заявляю про це:</strong></p><ul><li>Я використовую гроші тільки для цієї діяльності;</li><li>Я використовую гроші відповідно до правил схеми;</li><li>Я розумію, що повинен повернути гроші, якщо використаю їх не за призначенням.</li></ul>"
+            "accept_compliance_rules_info": "<p><strong>Я заявляю про це:</strong></p><ul><li>Я використовую гроші тільки для цієї діяльності;</li><li>Я використовую гроші відповідно до правил схеми;</li><li>Я розумію, що повинен повернути гроші, якщо використаю їх не за призначенням.</li></ul>",
+            "accept_compliance_rules": "Я погоджуюся з вищезазначеними умовами та положеннями."
         }
     },
     "vouchers": {
